--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
 <body>
 <hr/>
 <ul>
-    <li><a href="rest/restaurants/2019-08-15">Menu for today</a></li>
+    <li><a href="rest/menu/2019-08-15">Menu for 2019-08-15</a></li>
 </ul>
 <hr/>
 </body>
